@@ -1,5 +1,7 @@
 Changes with APR-util 0.9.2
 
+  *) Add --includedir flag to apu-config.  [Justin Erenkrantz]
+
   *) Fix brokenness in sdbm when sizeof(int) != sizeof(size_t)
      (e.g., 64-bit AIX, 64-bit Solaris).  PR 14861.  [Jeff Trawick]
 
